@@ -1,3 +1,8 @@
+2013-10-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* companies/company_detail.php: Now is possible to set the parent
+	company to none.
+	
 2013-10-04  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* mobile/operation/home.php,
